fixed z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,7 +57,7 @@ body {
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 2;
+    z-index: 5;
     cursor: pointer;
 }
 
@@ -71,7 +71,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-	z-index: 3;
+	z-index: 6;
 	margin: auto;
 	overflow: hidden;
 	box-shadow: 1px 1px 5px #000000;
@@ -463,7 +463,7 @@ form:not(.search):not(.deleteTopicForm) button:hover {
 /*medium devices*/
 @media screen and (max-width: 630px) {
 	.sidenav {padding-top: 15px;}
-	.sidenav a {font-size: 18px;}
+	.sidenav a {font-size: 18px;} 
 
 	#searchBar {
 		float: none;
